# LTEngine-esc

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  ARCHIVE.md  CODE_OF_CONDUCT.md  DEPENDENCIES.md  HANDOFF.md  PORTABLE_APP.md  PRIMARY_TODO.md  PROJECT_SPEC.md  README.md  RELEASING.md  ROADMAP.md  STYLE.md  TODO.md  WORKFLOW.md  elevation-setup.md  linux-dev-setup.md  mislabel-inventory.md  scripting.md
docs/decisions/: 001-cli-only-runtime.md  002-native-ui-and-cli.md
ltengine/: Cargo.toml  build.rs
ltengine/src/: banner.rs  cli.rs  document.rs  error_response.rs  languages.rs  llm.rs  main.rs  models.rs  prompt.rs  translation.rs
scripts/: docs-list.mjs
