[workspace]
resolver = "2"
members = [
    "ltengine",
    #"llama-cpp-rs/examples/simple",
]

[workspace.dependencies]
# core llama-cpp-2 deps
thiserror = "2"
tracing = "0.1"
tracing-core = "0.1"
bindgen = "0.72.1"
cc = "1.2.54"
encoding_rs = "0.8.35"

# llama-cpp-2 dependencies
hf-hub = { version = "0.4.3" }
anyhow = "1.0.101"
tracing-subscriber = { version = "0.3", features = ["json"] }

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }
unpredictable_function_pointer_comparisons = { level = "allow" }
mismatched_lifetime_syntaxes = { level = "allow" }

[workspace.lints.clippy]
pedantic = { level = "warn" }
