[package]
name = "ltengine"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-web = "4.12"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
actix-web-static-files = "4.0"
static-files = "0.2.1"
hf-hub = { version = "0.3.2" }
anyhow = "1.0.101"
llama-cpp-2 = { path = "../llama-cpp-rs/llama-cpp-2", version = "0.1.134" }
encoding_rs = "0.8.35"
actix-multipart = "0.7.2"
whatlang = "0.16.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]

[build-dependencies]
static-files = "0.2.1"
