[package]
name = "ltengine"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21.3"
hf-hub = { version = "0.3.2" }
anyhow = "1.0.101"
llama-cpp-2 = { path = "../llama-cpp-rs/llama-cpp-2", version = "0.1.134" }
encoding_rs = "0.8.35"

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
